--- a/src/pages/History/History.css
+++ b/src/pages/History/History.css
@@ -144,34 +144,12 @@
     background-color: #f4f4f4;
 }
 
-.back-button {
+.footer-history {
     position: fixed;
-    z-index: 90;
-    bottom: 60px;
-    left: 20px;
-    height: 50px;
-    width: 50px;
-    display: flex;
-    align-items: center;
-    background: linear-gradient(135deg,#61994D, #27441d);
-    color: white;
-    padding-left: 12px;
-    padding-bottom: 8px;
-    border: none;
-    border-radius: 50px;
-    cursor: pointer;
-    font-weight: bold;
-}
-
-.back-icon {
-    font-size: 25px;
-    font-weight: bolder;
-}
-
-.footer {
     background: linear-gradient(135deg, #414141, #141414);
     color: white;
     text-align: left;
+    z-index: 1;
     bottom: 0px;
     width: 100%;
     padding: 15px;
