--- a/src/pages/History/History.css
+++ b/src/pages/History/History.css
@@ -39,6 +39,13 @@
     border: 2px solid white;
 }
 
+.profile-pic-history-admin {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 2px solid white;
+}
+
 .history-content {
     padding: 100px 20px 20px 20px;
 }
