--- a/src/pages/Beranda/UserDashboard.css
+++ b/src/pages/Beranda/UserDashboard.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+*::-webkit-scrollbar {
+    display: none;
+}
+
 /* Container */
 .home-container {
     display: flex;
@@ -52,7 +56,7 @@
 .cart-icon {
     font-size: 32px;
     color: #ffffff;
-    margin-right: 10px;
+    margin-right: 25px;
     cursor: pointer;
 }
 
@@ -76,39 +80,7 @@
     padding: 100px 20px 20px 20px;
     background-color: #f4f4f9;
     flex: 1;
-}
-
-.product-card {
-    background-color: white;
-    border-radius: 8px;
-    padding: 15px;
-    text-align: center;
-    box-shadow: 2px 2px 5px hsl(0deg 0% 0% / 0.2);
-}
-
-.product-image {
-    width: 100%;
-    max-width: 150px;
-    height: 150px;
-    object-fit: cover;
-    border-radius: 5px;
-}
-
-.product-name {
-    font-size: 18px;
-    font-weight: bold;
-    margin: 10px 0;
-}
-
-.product-price {
-    font-size: 16px;
-    color: #61994D;
-    margin-bottom: 5px;
-}
-
-.product-sold, .product-stock {
-    font-size: 14px;
-    color: #666;
+    place-items: center; /* Tambahkan ini untuk memusatkan produk */
 }
 
 /* Footer */
