--- a/src/pages/Carts/Cart.css
+++ b/src/pages/Carts/Cart.css
@@ -41,9 +41,10 @@
 }
 
 .cart-icon {
-    margin-right: 10px;
+    font-size: 32px;
+    color: #ffffff;
+    margin-right: 25px;
     cursor: pointer;
-    font-size: 1.2em;
 }
 
 .cart-content {
