--- a/src/pages/Admin/AdminDashboard.css
+++ b/src/pages/Admin/AdminDashboard.css
@@ -78,51 +78,6 @@
     border: 2px solid white;
 }
 
-/* Popup Menu */
-.popup-menu {
-    position: absolute;
-    top: 60px; /* Sesuaikan jarak dari header */
-    right: 20px;
-    background-color: white;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
-    width: 150px;
-    z-index: 10;
-    display: flex;
-    flex-direction: column;
-}
-
-.popup-item {
-    padding: 10px;
-    color: #333;
-    text-align: left;
-    text-decoration: none;
-    font-size: 14px;
-    border-bottom: 1px solid #eee;
-    transition: background-color 0.75s ease;
-}
-
-.popup-item:hover {
-    border-radius: 8px;
-    background-color: #f4f4f4;
-}
-
-.logout-button {
-    border: none;
-    background: none;
-    color: #d9534f;
-    padding: 10px;
-    text-align: left;
-    cursor: pointer;
-    font-size: 14px;
-    transition: background-color 0.5s ease;
-}
-
-.logout-button:hover {
-    background-color: #f4f4f4;
-}
-
 .dashboard-content {
     flex: 1;
     padding: 100px 20px 20px 30px;
@@ -149,46 +104,9 @@
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
-}
-
-.product-card-admin {
-    width: calc(25% - 20px);
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 2px 2px 5px hsl(0deg 0% 0% / 0.2);
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-}
-
-.product-price,
-.product-sold,
-.product-stock {
-    font-size: 0.9em;
-    margin: 5px 0;
-}
-
-.edit-button,
-.delete-button {
-    padding: 6px 12px;
-    margin: 10px 10px 0px 10px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.edit-button {
-    width: 75px;
-    background-color: #61994D;
-    color: #fff;
-}
-
-.delete-button {
-    width: 75px;
-    background-color: #dc3545;
-    color: #fff;
+    justify-content: flex-start; /* Tetap rata kiri */
+    max-width: 1200px; /* Batas maksimal lebar */
+    margin: 0 auto;
 }
 
 .admin-footer {
