--- a/src/components/CSS/ButtonBack.css
+++ b/src/components/CSS/ButtonBack.css
@@ -1,16 +1,12 @@
 .back-button {
     position: fixed;
     z-index: 90;
-    bottom: 60px;
-    left: 20px;
-    height: 50px;
     width: 50px;
     display: flex;
     align-items: center;
+    text-align: center;
     background: linear-gradient(135deg, #61994D, #27441d);
     color: white;
-    padding-left: 12px;
-    padding-bottom: 8px;
     border: none;
     border-radius: 50px;
     cursor: pointer;
@@ -18,5 +14,6 @@
 }
 
 .back-icon {
+    margin-bottom: 9px;
     font-size: 25px;
 }
