--- a/src/components/CSS/CartItem.css
+++ b/src/components/CSS/CartItem.css
@@ -6,6 +6,7 @@
     margin-bottom: 15px;
     border: 1px solid #ddd;
     border-radius: 8px;
+    box-shadow: 2px 2px 3px hsl(0deg 0% 0% / 0.2);
 }
 
 .cart-item-image {
@@ -17,16 +18,23 @@
 }
 
 .cart-item-details {
-    gap: 50px;
     display: flex;
     flex-direction: row;
+    gap: 10px;
+}
+
+.cart-item-price-detail {
+    display: flex;
+    flex-grow: 1;
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
+    gap: 150px;
 }
 
 .cart-item-name {
     font-size: 1.2em;
     margin-bottom: 5px;
+    width: 200px;
 }
 
 .cart-item-price {
