--- a/src/pages/AddProduct/AddProduct.css
+++ b/src/pages/AddProduct/AddProduct.css
@@ -1,4 +1,17 @@
+*::-webkit-scrollbar {
+    display: none;
+}
+
 .tambah-produk-container {
+    background-image: linear-gradient(#00000069, #00000069), url('/public/6184604.jpg');
+    background-size: cover;
+    background-position: center;
+    height: 100%;
+    padding: 25px;
+    font-family: Arial, sans-serif;
+}
+
+.tambah-produk-content {
     max-width: 500px;
     margin: 20px auto;
     padding: 20px;
@@ -22,15 +35,27 @@
     margin-bottom: 5px;
 }
 
-.form-group input,
-.form-group textarea {
+.form-group input {
+    font-family: Arial, Helvetica, sans-serif;
     width: 100%;
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
 
-.save-button {
+.form-group textarea {
+    font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.form-group textarea:focus {
+    border-color: #61994D;
+}
+
+.button-save {
     display: block;
     width: 100%;
     padding: 10px;
@@ -43,6 +68,6 @@
     text-align: center;
 }
 
-.save-button:hover {
+.button-save:hover {
     background-color: #45a049;
 }
