--- a/src/pages/Receipt/Receipt.css
+++ b/src/pages/Receipt/Receipt.css
@@ -19,8 +19,9 @@
 
 .receipt-header {
     position: fixed;
+    left: 0px;
     top: 0px;
-    width: 100%;
+    width: 99%;
     text-align: left;
     border-radius: 0px 0px 75px 0px;
     background: linear-gradient(135deg,#61994D, #385c2b);
