--- a/src/components/CSS/ProductCard.css
+++ b/src/components/CSS/ProductCard.css
@@ -1,3 +1,8 @@
+.product-card-link {
+    text-decoration: none;
+    color: inherit;
+}
+
 .product-card {
     background-color: white;
     border-radius: 8px;
